--- a/home/index.html
+++ b/home/index.html
@@ -66,7 +66,7 @@
 			<header>
 				<nav class="navbar navbar-navs navbar-expend navbar-expand-md fixed-top" id="menu-top">
 					<div class="container">
-						<a class="navbar-brand" href="index.html">Muhsi</a>
+						<a class="navbar-brand" href="index.html">SexyCoders</a>
 						<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
 							<span></span>
 							<span></span>
@@ -93,7 +93,7 @@
 			<!-- START HOME -->
 			<section id="home">
 			</section>
-			<section class="atf-header-area atf-align-items-details" style="background-image: url('https://lib.sexycoders.org/share/logos/live/SexyCodersLogo%20(5208%20%C3%97%203255%20px).gif');  background-size:cover; background-position: center center;">
+			<!--<section class="atf-header-area atf-align-items-details" style="background-image: url('https://lib.sexycoders.org/share/logos/live/SexyCodersLogo%20(5208%20%C3%97%203255%20px).mp4');  background-size:cover; background-position: center center;">-->
 				<!--<div class="container">-->
 					<!--<div class="row atf-content-details align-items-center justify-content-center">-->
 						 <!--[>LEFT COL<]-->
@@ -107,8 +107,11 @@
 						<!--</div>[>- END COL <]-->
 					<!--</div>[>- END ROW <]-->
 				<!--</div>[>- END CONTAINER <]-->
-			</section>
-			<!-- END HOME -->
+			<!--</section>-->
+			<video id="background-video" background-size="cover" width="100%" autoplay loop muted>
+				<source src="https://lib.sexycoders.org/share/logos/live/SexyCodersLogo%20(5208%20%C3%97%203255%20px).mp4" type="video/mp4">
+			</video>
+			 <!--END HOME -->
 			
 				
 				
