fixed video size

--- a/home/index.html
+++ b/home/index.html
@@ -91,8 +91,6 @@
 			<!-- END NAVBAR -->
 			
 			<!-- START HOME -->
-			<section id="home">
-			</section>
 			<!--<section class="atf-header-area atf-align-items-details" style="background-image: url('https://lib.sexycoders.org/share/logos/live/SexyCodersLogo%20(5208%20%C3%97%203255%20px).mp4');  background-size:cover; background-position: center center;">-->
 				<!--<div class="container">-->
 					<!--<div class="row atf-content-details align-items-center justify-content-center">-->
@@ -108,9 +106,11 @@
 					<!--</div>[>- END ROW <]-->
 				<!--</div>[>- END CONTAINER <]-->
 			<!--</section>-->
-			<video id="background-video" background-size="cover" width="100%" autoplay loop muted>
+			<section id="home" class="atf-header-area atf-align-items-details">
+			<video background-size="cover" width="100%" autoplay loop muted>
 				<source src="https://lib.sexycoders.org/share/logos/live/SexyCodersLogo%20(5208%20%C3%97%203255%20px).mp4" type="video/mp4">
 			</video>
+			</section>
 			 <!--END HOME -->
 			
 				
