removed unused links from the header

--- a/home/index.html
+++ b/home/index.html
@@ -76,12 +76,12 @@
 							<ul class="navbar-nav ml-auto">
 								<li class="menu-nav"><a class="nav-link page-scroll active" href="#home">Home</a></li>
 								<li class="menu-nav"><a class="nav-link page-scroll" href="#about">About</a></li>
-								<li class="menu-nav"><a class="nav-link page-scroll" href="#agency-team">Team</a></li>
-								<li class="menu-nav"><a class="nav-link page-scroll" href="#service">Service</a></li>
-								<li class="menu-nav"><a class="nav-link page-scroll" href="#gallery">Work</a></li>
-								<li class="menu-nav"><a class="nav-link page-scroll" href="#portfolio">Portfolio</a></li>
-								<li class="menu-nav"><a class="nav-link page-scroll" href="#pricing">Pricing</a></li>
-								<li class="menu-nav"><a class="nav-link page-scroll" href="#blog">Blog</a></li>
+								<!--<li class="menu-nav"><a class="nav-link page-scroll" href="#agency-team">Team</a></li>-->
+								<li class="menu-nav"><a class="nav-link page-scroll" href="#services">Services</a></li>
+								<!--<li class="menu-nav"><a class="nav-link page-scroll" href="#gallery">Work</a></li>-->
+								<!--<li class="menu-nav"><a class="nav-link page-scroll" href="#portfolio">Portfolio</a></li>-->
+								<!--<li class="menu-nav"><a class="nav-link page-scroll" href="#pricing">Pricing</a></li>-->
+								<!--<li class="menu-nav"><a class="nav-link page-scroll" href="#blog">Blog</a></li>-->
 								<li class="menu-nav"><a class="nav-link page-scroll" href="#contact">Contact</a></li>
 							</ul>
 						</div>
